# pseint-lsp

./: .gitignore  .pre-commit-config.yaml  COMPLETION_FIX_SUMMARY.md  Makefile  README.md  STRING_FORMATTING_IMPROVEMENTS.md  __init__.py  cli_formatter.py  completions.py  diagnostics.py  formatter.py  install-tools.sh  launch.py  nvim-config-example.lua  pseint-formatter.py  pseint_parser.py  pseint_syntax_and_formatting_rules.md  pyproject.toml  pyrightconfig.json  quick_test.py  reference_code2.psc  reference_code3.psc  requirements-dev.txt  requirements.txt  ruff.toml  run_formatter.py  run_server.sh  server.py  setup-dev.sh  test_case_sensitivity.py  test_completion_check.py  test_comprehensive.py  test_contextual_completion.py  test_deep_inspection.py  test_final.py  test_lsp_completion.py  test_neovim.psc  test_simple_completion.py
docs/: EDITOR_AGNOSTIC_ENCODING_SOLUTION.md  ENCODING_COMPATIBILITY_ANALYSIS.md  FORMATTER_ERROR_ANALYSIS.md  FORMATTER_FIXES_SUMMARY.md  MAKE_WITH_PYTHON_GUIDE.md  STRING_FORMATTING_IMPROVEMENTS.md  SUBALGORITMO_TEST_INTEGRATION_SUMMARY.md  TEST_PRESERVATION_SUMMARY.md  TEST_SUITE_DOCUMENTATION.md  pseint_diagnostics_list.md  pseint_diagnostics_priority.md
pseint_lsp/: cli_formatter.py  encoding_utils.py  launch.py  run_formatter.py  server.py
pseint_lsp_py/: README.md  formatter.py  requirements.txt  server.py
pseint_lsp_server/: Cargo.toml
pseint_lsp_server/src/: lib.rs  main.rs
reference_code/: extensive_reference_code.psc  formatted_reference_code1.psc  formatted_reference_code1_fixed.psc  reference_code1.psc  (+4 more)
(+33 files in other folders)
